--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "husong",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.6.1"
   }
