--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "element-ui": "^1.0.0-rc.4",
     "express": "^4.14.0",
     "mongoose": "^4.6.1"
   }
