--- a/stastics-vue/package.json
+++ b/stastics-vue/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "echarts": "^3.2.3",
     "element-ui": "^1.0.0-rc.4",
     "vue": "^1.0.21",
     "vue-resource": "^1.0.2",
