--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.15.2",
     "element-ui": "^1.0.0-rc.4",
     "express": "^4.14.0",
-    "mongoose": "^4.6.1"
+    "md5": "^2.2.1",
+    "mongoose": "^4.6.1",
+    "request": "^2.75.0"
   }
 }
